# activity_recognition_ssl_with_hc_features

./: .gitignore  README.md  dataset_registry.yaml  pyproject.toml  requirements.txt
configs/: hybrid_queue_runner.sh  multidataset_base.yaml  queue_runner.sh  run_all_datasets.sh  run_hybrid_all.sh
scripts/core/: hc_features.py  hybrid_grid.py  manifest.py  pretrain_export.py  repro_utils.py  splits.py  summarize_hybrid.py  windowing.py
scripts/datasets/: actbecalf.py  export_windowed.py  horse.py  marinara.py  pamap2.py  uci_har.py  vehkaoja.py  wisdm.py
src/common/: metrics.py  registry.py
src/encoders/: __init__.py  cnn_lstm.py  cnn_tfc.py  null_signal.py  patchtsmixer.py  patchtst.py  resnet1d.py
src/hc_framework/: main.py
src/hc_framework/data/: __init__.py  dataloader.py  pt_dataloader.py
src/hc_framework/models/: __init__.py  base.py  fusion.py  hc_branches.py  heads.py  model.py
src/hc_framework/training/: __init__.py  evaluation_report.py  loss.py  metrics.py  trainer.py
src/hc_framework/utils/: __init__.py  logging.py
src/pretrain_ablations/: config.py  experiment.py
src/pretrain_ablations/datasets/: loader.py
src/pretrain_ablations/eval/: confusion.py
src/pretrain_ablations/results/: summarize.py
src/pretraining/: mae.py  simclr.py  supervised.py  tfc.py  tstcc.py
