[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "activity_recognition_ssl_with_hc_features"
version = "0.1.0"
description = "HAR with SSL + hand-crafted features: pretraining ablations and hybrid models"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "transformers>=4.40.0",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
    "tokenizers>=0.15",
    "seaborn>=0.13",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
